# Devin-Work

./: .env  .eslintrc.cjs  .eslintrc.json  .gitignore  App.vue  Makefile  PR_DESCRIPTION.md  README.md  animation-libraries.md  animation-todo.md  eslint.config.cjs  eslint.config.js  gcp_pricing_documentation.md  generate_content.py  generate_diagram.py  generate_docs.py  generate_ieee_docs.py  index.html  init_logging.py  instagram_analysis.md  instagram_system.puml  instagram_system_diagram.md  minishell  notes.txt  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  pyproject.toml  python_captcha_service.py  samrah_cv.html  samrah_cv.tex  tailwind.config.js  todo.txt  tsconfig.app.json  tsconfig.json  vite.config.js
backend/: .env  Dockerfile  fly.toml  gunicorn_config.py  package-lock.json  package.json  pyproject.toml  railway.toml  render.yaml  requirements.txt  server-test.js  server.js  start.sh
captcha-bypass/: .gitignore  package-lock.json  package.json  playwright.config.ts  tsconfig.json
captcha_data/: config.json
gcp_pricing_package/: GCP_Pricing_Documentation.docx  GCP_Pricing_Documentation_IEEE.docx  gcp_pricing_documentation.md
high_entropy_rng/: .gitignore  README.md  cpu_jitter_entropy.py  high_entropy_rng.py  implementation_documentation.md  requirements.txt  test_fallbacks.py
include/: minishell.h
libft/: Makefile  ft_atoll.c  ft_strcmp.c  libft.h
load-tests/: company-information-flow.js  config.js  error-tracking.js  final-report.md  load-test-report.md  login-flow.js  login-results.json  login-summary.md  run-tests.js  (+5 more)
(+329 files in other folders)
