[tool.poetry]
name = "captcha-solver-service"
version = "0.1.0"
description = "CAPTCHA solving microservice with multiple strategies"
authors = ["Devin <devin@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.0"
opencv-python = "^4.5.0"
numpy = "^1.21.0"
pillow = "^9.0.0"
scikit-image = "^0.19.0"
matplotlib = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "python_captcha_service:app"
